--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,13 @@
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+html,body{
+    height: 100%;
+    width: 100%;
+}
+
 /* Start : Header */
 #topheader{
     border-bottom: 1px solid #ebebeb;
@@ -86,7 +96,7 @@
     width: 450px;
 }
 .content1{
-    letter-spacing: 3px;
+    letter-spacing: 1px;
     font-weight: 700;
 }
 .content2{
